# Inverted-Index-search

./: README.md  keyword_search.py  pyproject.toml
