[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "inverted_index_search"
version = "1.0.0"
authors = [{ name="Affan Mir", email="affanmir95@gmail.com" }]
description = "A module for creating ngrams and searching multiple phrases using inverted index searching in a document"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"